<resources>
    <string name="app_name" translatable="false">SquashMe</string>
    <string name="main_page">Main page</string>
    <string name="quick_match">Quick match</string>
    <string name="tournament">Tournament</string>
    <string name="match_history">Match history</string>
    <string name="settings">Settings</string>
    <string name="player1_full_name_nick_name">Player 1 full name / nickname</string>
    <string name="player2_full_name_nick_name">Player 2 full name / nickname</string>
    <string name="best_of" translatable="false">Best of</string>
    <string name="best_of_hint">Type number of max sets or leave empty</string>
    <string name="two_points_advantage_rule">2 points advantage rule</string>
    <string name="referee_mode">Referee mode</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="error_name_empty">Name cannot be empty</string>
    <string name="error_field_empty">Field cannot be empty</string>
    <string name="error_best_of_games">Best of games number should be positive or empty</string>
    <string name="error_not_a_number">Provided input is not a number</string>
    <string name="error_max_length">Max length allowed: %1$d</string>
    <string name="error_max_number">Max number allowed: %1$d</string>
    <string name="referee_view">Referee view</string>
    <string name="left_side">L</string>
    <string name="right_side">R</string>
    <string name="end_game">End game</string>
    <string name="revert_point">Revert point</string>
    <string name="close_protocol">Close protocol</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="best_of_not_null_hint">Type number of max sets</string>
    <string name="tournament_type">Tournament type</string>
    <string name="error_best_of_must_be_odd">Draws are not allowed - best of should be odd number</string>
    <string name="player_number">Number of players</string>
    <string name="error_min_players">Should be at least %1$d players</string>
    <string name="player">Player</string>
    <string name="add_players">Add players</string>
    <string name="error_player_exists">Player name already exists</string>
    <string name="next_set">Next set</string>
    <string name="playerOne">Player 1</string>
    <string name="playerTwo">Player 2</string>
    <string name="round">Round</string>
    <string name="confirm">Confirm</string>
    <string name="provide_score_mode">Provide score mode</string>
    <string name="vs" translatable="false">%1$s vs %2$s</string>
    <string name="slash" translatable="false">%1$d/%2$d</string>
    <string name="title_activity_x_d" translatable="false">MainActivity</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="games">Games</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="close">Close</string>
    <string name="end_tournament">End tournament</string>
    <string name="name">Name</string>
    <string name="sets">Sets</string>
    <string name="points">Points</string>
    <string name="language">Language</string>
    <string name="languages_prompt">Choose language</string>
    <string name="darkMode">Dark theme</string>
    <string name="lightMode">Light theme</string>
    <string name="systemSetting">System theme</string>
    <string name="theme">Theme</string>
    <string name="theme_prompt">Choose theme</string>
    <string name="quick_match_history">Quick match history</string>
    <string name="tournament_history">Tournament history</string>
    <string name="history">History</string>
    <string name="versus_shortcut">vs</string>
    <string name="error_best_of_games_positive">Best of games should be positive number</string>
    <string name="result">Result</string>
    <string name="colon" translatable="false">%1$d : %2$d</string>
    <string name="tournament_close_prompt">Are you sure you want to end the tournament?</string>
    <string name="tournament_name">Tournament name</string>
    <string name="start_match_prompt">Are you sure you want to start selected match?</string>
    <string name="player_one_name_hint">Type player one full name</string>
    <string name="player_two_name_hint">Type player two full name</string>
    <string name="allowed_characters" translatable="false">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ -</string>
    <string name="allowed_characters_with_digits" translatable="false">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ -0123456789</string>
    <string name="tournament_name_input">Type tournament name</string>
    <string name="number_of_players_input">Type number of players</string>
    <string name="match_finished">Match finished</string>
    <string name="set_finished">Set finished</string>
    <string name="walkover">WALKOVER</string>
    <string name="answer_no">NO</string>
    <string name="answer_yes">YES</string>
    <string name="time_is_up">Time is up</string>
    <string name="ninety_seconds_break">90 seconds break</string>
    <string name="confirm_ending_game">Are you sure you want to end game?</string>
    <string name="ending_game">Ending game</string>
    <string name="choose_who_won">Choose who won the game:</string>
    <string name="click_end_game">Click \'END GAME\' to exit</string>

    <string-array name="languages">
        <item>English</item>
        <item>Polski</item>
    </string-array>

    <string-array name="themes">
        <item>@string/darkMode</item>
        <item>@string/lightMode</item>
        <item>@string/systemSetting</item>
    </string-array>
</resources>
