<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuickMatchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/text_player1_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:labelFor="@id/inp_player1_fullName"
            android:text="@string/player1_full_name_nick_name" />

        <EditText
            android:id="@+id/inp_player1_fullName"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            android:ems="10"
            android:gravity="start"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/text_player2_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:labelFor="@id/inp_player2_fullName"
            android:text="@string/player2_full_name_nick_name" />

        <EditText
            android:id="@+id/inp_player2_fullName"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            android:ems="10"
            android:gravity="start"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/text_match_bestOf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:labelFor="@id/inp_match_bestOf"
            android:text="@string/best_of" />

        <EditText
            android:id="@+id/inp_match_bestOf"
            android:hint="@string/best_of_hint"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            android:ems="10"
            android:gravity="start"
            android:inputType="number"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <CheckBox
            android:id="@+id/chk_match_twoPointsAdvantage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/two_points_advantage_rule"
            android:checked="false"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="start|center_vertical"/>

        <CheckBox
            android:id="@+id/chk_match_refereeMode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/referee_mode"
            android:checked="false"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="start|center_vertical"/>

        <Button
            android:id="@+id/btn_match"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:text="@string/create"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_gravity="center"
            android:text="@string/cancel"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>