<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    tools:context=".fragment.tournament.CreateTournamentFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_tournament_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="@string/tournament_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inp_tournament_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:gravity="start"
                    android:digits="@string/allowed_characters"
                    android:importantForAutofill="no"
                    android:maxLength="64"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_tournament_bestOf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        android:hint="@string/best_of_not_null_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inp_tournament_bestOf"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:ems="10"
                            android:background="@android:color/transparent"
                            android:gravity="start"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:maxLength="2"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_tournament_players_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        android:hint="@string/player_number">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inp_tournament_max_players"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:ems="10"
                            android:background="@android:color/transparent"
                            android:gravity="start"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:maxLength="2"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_tournament_spinner_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/spinner_tournament_type"
                        android:text="@string/tournament_type" />

                    <Spinner
                        android:id="@+id/spinner_tournament_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/chk_tournament_twoPointsAdvantage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:button="@null"
                    android:checked="false"
                    android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                    android:gravity="start|center_vertical"
                    android:paddingHorizontal="10dp"
                    android:text="@string/two_points_advantage_rule" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_tournament_cancel"
                    style="@style/SquashMeOutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:textColor="@color/main_color"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn_tournament_create"
                    style="@style/SquashMeOutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_weight="1"
                    android:text="@string/create"
                    android:textColor="@color/main_color"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</FrameLayout>